syntax = "proto3";

package api_core.users;

service Users {
    rpc FindId(FindIdRequest) returns (FindResponse);
    rpc FindPhone(FindPhoneRequest) returns (FindResponse);
    rpc FindEmail(FindEmailRequest) returns (FindResponse);
}


message FindIdRequest {
    int64 id = 1; 
}

message FindPhoneRequest {
    int64 phone = 1;
}

message FindEmailRequest {
    string email = 1;
}

message FindResponse {
    UserResource user = 1;
}


message UserResource {
    int64 id = 1;
    int64 phone = 2;
    string email = 3;
    string login = 4;
    string avatar = 5;
    map<string, double> balance = 6;
}